# pcsc-ode

./: .gitmodules  AdamBashforth4.hh  BackwardEuler.hh  CMakeLists.txt  ForwardEuler.hh  README.md  RungeKutta4.hh  assess.cpp  assess.hh  discrete_solver.hh  main.cpp  solver.cpp  solver.hh  uml_diagram.txt
Problem/: Problem.cpp  Problem.hh  Problem_ODE.cpp  Problem_ODE.hh
Reader/: CMakeLists.txt  Reader.cpp  Reader.hh  Reader_ODE.cpp  Reader_ODE.hh
docs/: CMakeLists.txt  Doxyfile.in
include/ErrorHandler/: ExceptionHandler.h
include/Function/: Function.h
include/FunctionComponent/: FunctionComponent.h
include/Output/: AbstractOutput.h  FileOutput.h  GraphOutput.h  output.hh
include/OutputHandler/: OutputHandler.h
include/Problem/: Problem.hh  Problem_ODE.hh
include/Reader/: Reader.hh  Reader_ODE.hh
include/Solver/: AdamBashforthSolver.h  BackwardEulerSolver.h  DiscreteSolver.hh  ForwardEulerSolver.h  RungeKuttaSolver.h  Solver.hh
src/: CMakeLists.txt
src/Function/: CMakeLists.txt  Function.cpp
src/FunctionComponent/: CMakeLists.txt  FunctionComponent.cpp
src/Output/: AbstractOutput.cpp  CMakeLists.txt  FileOutput.cpp  GraphOutput.cpp  output.cpp
src/OutputHandler/: CMakeLists.txt  OutputHandler.cpp
src/Problem/: CMakeLists.txt  Problem.cpp  Problem_ODE.cpp
src/Reader/: CMakeLists.txt  Reader.cpp  Reader_ODE.cpp
src/Solver/: AdamBashforthSolver.cpp  BackwardEulerSolver.cpp  CMakeLists.txt  DiscreteSolver.cpp  ForwardEulerSolver.cpp  RungeKuttaSolver.cpp
tests/: CMakeLists.txt  FileOutputTest.cpp  FunctionComponentTest.cpp  FunctionTest.cpp  GraphOutputTest.cpp  Problem_ODETest.cpp  Reader_ODETest.cpp  SolversTest.cpp  testEverything.sh
